--- a/blogpost.html
+++ b/blogpost.html
@@ -4,9 +4,16 @@
         <link rel="stylesheet" href="Estilos.css"/>
     </head>
     <body>
-            <h1>    
-                Aquí vamos a hacer un blogpost
-            </h1>
-            <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>    
+                    Titulo atractivo
+                </h1>
+                <p>Y este es el parrafo de inicio
+                    donde vamos a explicar las cosas 
+                    que se pueden hacer con ramas
+                </p>
+            </div>
+        </div>           
     </body>
 </html>
