--- a/blogpost.html
+++ b/blogpost.html
@@ -8,5 +8,6 @@
                 Aquí vamos a hacer un blogpost
             </h1>
             <p>Y este es el parrafo de inicio</p>
+            <p>Los blogs son la mejor forma de compartir informacion y tus ideas</p>
     </body>
 </html>
