Agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,17 +4,10 @@
         <link rel="stylesheet" href="Estilos.css"/>
     </head>
     <body>
-<<<<<<< HEAD
-            <h1>    
-                Aquí vamos a hacer un blogpost
-            </h1>
-            <p>Y este es el parrafo de inicio</p>
-            <p>Los blogs son la mejor forma de compartir informacion y tus ideas</p>
-=======
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de maestro</span>
             </div>     
             <div id="post">
                 <h1>    
@@ -24,8 +17,8 @@
                     donde vamos a explicar las cosas 
                     que se pueden hacer con ramas
                 </p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>           
->>>>>>> cabecera
     </body>
 </html>
